<resources>
    <string name="app_name">My Application</string>
    <string name="bagian1">Shazam merupakan film superhero DC universe pertama yang rilis tahun 2019. Sebelumnya, DC Universe menutup tahun 2018 dengan film Aquaman.</string>
    <string name="bagian2">Shazam menawarkan tone yang lebih ringan dari film besutan DC Universe pendahulunya. Shazam menceritakan tentang Billy Batson, bocah berusia 14 tahun. Billy Batson adalah anak yatim piatu yang sering berpindah rumah asuh (foster home). Suatu hari Billy bertemu dengan penyihir tua bernama Shazam. Entah bagaimana, penyihir tua tersebut memberikan Billy kekuatan super. Billy hanya perlu mengucapkan kata \'Shazam!\' dan dirinya kan berubah menjadi pemuda dewasa berkekuatan super.</string>
    <string name="bagian3">Masih berjiwa anak-anak, Billy sebagai Shazam dewasa suka bersenang-senang. Shazam dewasa pun melakukan hal-hal yang dilakukan anak remaja seusia Billy. Namun dirinya masih belum menemukan apa saja kekuatan super yang ia miliki.</string>
    <string name="bagian4">Shazam harus menguasai kekuatannya dengan cepat untuk melawan Dr. Thaddeus Sivana. Dengan hal-hal ceroboh yang menyenangkan, petualangan Freddy dan Shazam dewasa bisa disaksikan mulai hari ini.</string>
    <string name="bagian5">Dilansir dari situs resmi Warner Bros, inilah kutipan sinopsis Shazam. \'Dalam hati kita, kita memiliki superhero favorit dan hanya membutuhkan sedikit sihir untuk membawanya keluar. Dalam Kisah Billy Batson, ia hanya perlu meneriakkan satu kata \'Shazam!\' Dengan alur cerita yang ceria dan menghibur, jauh dari kesan kelam ala DC Universe. Sutradara David F. Sandberg menungkapkan, alur cerita Shazam dapat merangkul berbagai usia.</string>
    <string name="bagian6">Pasalnya plot cerita Shazam adalah apa yang dirasakan banyak orang di waktu kecil. \'Hal tersebut adalah keinginan, anak-anak untuk tumbuh menjadi superhero,\' ungkap David. Dibintangi oleh Asher Angel sebagai Billy Batson. Shazam dewasa akan diperankan oleh Zachary Levy. Zachary Levi merupakan aktor pengisi suara Eugene di film Disney, Tangled (2010). Menggaet aktor senior Mark Strong sebagai Dr. Thaddeus Sivana, musuh Shazam.</string>
</resources>
