<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#000033">


    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Home"
        android:fontFamily="arial"
        android:textSize="30sp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#e6ac00"/>

    <ImageView
        android:id="@+id/text2"
        android:layout_below="@+id/text1"
        android:scaleType="centerCrop"
        android:layout_width="500dp"
        android:layout_height="123dp"
        android:src="@drawable/tix"
        android:layout_marginTop="-1dp"/>

    <ScrollView
        android:id="@+id/text3"
        android:layout_below="@id/text2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="SINOPSIS SHAZAM!"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textColor="#ffffff"
                android:padding="10dp">

            </TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bagian1"
                android:textColor="#ffffff"
                android:padding="10dp">

            </TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bagian2"
                android:textColor="#ffffff"
                android:padding="10dp">

            </TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bagian3"
                android:textColor="#ffffff"
                android:padding="10dp">

            </TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bagian4"
                android:textColor="#ffffff"
                android:padding="10dp">

            </TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bagian5"
                android:textColor="#ffffff"
                android:padding="10dp">
            </TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bagian6"
                android:textColor="#ffffff"
                android:padding="10dp">
            </TextView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>